--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "uvicorn (>=0.40.0,<0.41.0)",
     "supabase (>=2.27.0,<3.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
-    "clerk-backend-api (>=4.2.0,<5.0.0)"
+    "clerk-backend-api (>=4.2.0,<5.0.0)",
+    "boto3 (>=1.42.19,<2.0.0)"
 ]
 
 
