--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,14 +6,22 @@ authors = [
     {name = "Your Name",email = "you@example.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
     "fastapi (>=0.127.1,<0.128.0)",
     "uvicorn (>=0.40.0,<0.41.0)",
     "supabase (>=2.27.0,<3.0.0)",
     "python-dotenv (>=1.2.1,<2.0.0)",
     "clerk-backend-api (>=4.2.0,<5.0.0)",
-    "boto3 (>=1.42.19,<2.0.0)"
+    "boto3 (>=1.42.19,<2.0.0)",
+    "celery (>=5.6.1,<6.0.0)",
+    "redis (>=7.1.0,<8.0.0)",
+    "langchain (==0.3.27)",
+    "langchain-community (==0.3.27)",
+    "langchain-openai (==0.3.28)",
+    "unstructured[all-docs] (==0.18.11)",
+    "sentence-transformers (>=5.2.0,<6.0.0)",
+    "scrapingbee (>=2.0.2,<3.0.0)"
 ]
 
 
